--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Queen Anya Ver.2",
-  "description": "Anya_v2-MD is an efficient and versatile WhatsApp bot designed to streamline your messaging experience with innovative features and seamless automation.",
+  "name": "Prime Ver.2",
+  "description": "Prime_v2-MD is an efficient and versatile WhatsApp bot designed to streamline your messaging experience with innovative features and seamless automation.",
   "repository": "https://github.COM/PikaBotz/Anya_v2-MD",
-  "logo": "https://i.ibb.co/bgfFFjF/Videoshot-20221026-164328.jpg",
+  "logo": "https://i.imgur.com/tzKZlfh.mp4",
   "keywords": ["Automation", "Innovation", "Versatility", "Efficiency", "Messaging", "Chatbot", "Integration", "Customization", "Ease of Use", "Personalization"],
   "success_url": "/",
   "stack": "container",
